# beefweb

./: CMakeLists.txt  README.md
cmake/: EnvInfo.cmake
cpp/: CMakeLists.txt
cpp/extlibs/boost/: CMakeLists.txt
cpp/server/: CMakeLists.txt  charset.hpp  content_type_map.cpp  content_type_map.hpp  file_system.hpp  http.cpp  http.hpp  player_api.hpp  player_api_json.cpp  player_api_json.hpp  player_events.cpp  player_events.hpp  query_controller.cpp  query_controller.hpp  response.cpp  response.hpp  response_headers_filter.cpp  response_headers_filter.hpp  response_sender.cpp  response_sender.hpp  server.cpp  server.hpp  server_host.cpp  server_host.hpp  system.hpp
cpp/server/foobar2000/: CMakeLists.txt  main_prefs_page.cpp  player.hpp  player_control.cpp  player_misc.cpp  plugin.cpp  plugin.hpp  settings.cpp  settings.hpp  utils.cpp  utils.hpp
cpp/server/tests/: CMakeLists.txt  server_tests.cpp  test_main.hpp
cpp/server/voicemeeter/: CMakeLists.txt  VoicemeeterRemote.h  voicemeeter.c  voicemeeter.cpp  voicemeeter.h  voicemeeter.hpp  voicemeeterClient.cpp  voicemeeterClient.hpp
docs/: building.md
